--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,12 @@
 @tailwind components;
 
 @tailwind utilities;
+
+body {
+  direction: ltr;
+  font-feature-settings: "liga" 0;
+  font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "sans-serif";
+
+  @apply text-gray-800 antialiased;
+}
