--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ body {
   font-feature-settings: "liga" 0;
   font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, "sans-serif";
+  font-size: 0.9375rem;
 
   @apply text-gray-800 antialiased;
 }
