--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,20 @@
 
 @tailwind utilities;
 
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(180deg);
+  }
+}
+
+.rotate {
+  animation: rotate 1.5s linear infinite;
+}
+
 body {
   direction: ltr;
   font-feature-settings: "liga" 0;
