refactor(header): redesign the header and navigation

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,10 @@
   animation: rotate 1.5s linear infinite;
 }
 
+.content-box {
+  box-sizing: content-box;
+}
+
 body {
   direction: ltr;
   font-feature-settings: "liga" 0;
